Cleaned up and streamlined functions; moved all functions to separate modules and cleaned up primary notebook.

--- a/archive/Export_BLM_TimeSeries_ImageCollection.ipynb
+++ b/archive/Export_BLM_TimeSeries_ImageCollection.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "# Function to calculate short-term and long-term blends\n",
-    "def calculate_droughtblends(img):\n",
+    "def preprocess_gm_drought(img):\n",
     "\n",
     "  # Define preliminary variables for short-term blend calculation\n",
     "  stb_variable = \"short_term_blend\"\n",
@@ -934,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
