--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -5,34 +5,15 @@
    "metadata": {},
    "source": [
     "To dos\n",
-    "1) Add additional functions (For categorical datasets - Histogram)\n",
-    "2) Improve logic and UX of main script\n",
-    "3) Add checks whether image asset already exists  \n",
-    "4) Handle NAs\n",
-    "5) Generate preprocessing scripts for other datasets"
+    "1) Improve logic and UX of main script  \n",
+    "2) Add checks whether image asset already exists   \n",
+    "3) Handle NAs  \n",
+    "4) Generate preprocessing scripts for other datasets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "hTeLmxy6lVf0",
-    "outputId": "9ef1ee0e-56a4-4929-f7e5-34fe9ae610d7",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import ee\n",
-    "# ee.Authenticate()\n",
-    "ee.Initialize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -48,6 +29,10 @@
     "import os\n",
     "import eeDatabase_coreMethods as eedb_cor\n",
     "import eeDatabase_collectionMethods as eedb_col\n",
+    "import ee\n",
+    "\n",
+    "# ee.Authenticate()\n",
+    "ee.Initialize()\n",
     "\n",
     "Map = geemap.Map()"
    ]
@@ -63,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -76,7 +61,7 @@
     "end_date = datetime.datetime(2022, 5, 1)\n",
     "\n",
     "# Define whether to initialize new image collection or append to existing image collection\n",
-    "process = 'initialize' \n",
+    "process = 'initialize' # 'initialize' or 'append'\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
@@ -86,8 +71,8 @@
     "in_ic = ee.ImageCollection(in_ic_path)\n",
     "\n",
     "# Define variable to generate database table for\n",
-    "var_name = 'long_term_drought_blend'\n",
-    "in_var_type = 'continuous'\n",
+    "var_name = 'short_term_drought_blend'\n",
+    "var_type = 'continuous' # 'continuous' or 'categorical'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -96,16 +81,16 @@
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "land_unit = 'blm-natl-grazing-allotment-polygons'\n",
     "\n",
-    "# # Subset by geometry\n",
-    "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
-    "# in_fc = in_fc.filterBounds(geometry)\n",
-    "# # Specify ID property\n",
-    "# in_fc_id = \"ALLOT_ID\"\n",
-    "\n",
-    "# Use full Feature Collection\n",
-    "in_fc = in_fc\n",
+    "# Subset by geometry\n",
+    "geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
+    "in_fc = in_fc.filterBounds(geometry)\n",
     "# Specify ID property\n",
     "in_fc_id = \"ALLOT_ID\"\n",
+    "\n",
+    "# # Use full Feature Collection\n",
+    "# in_fc = in_fc\n",
+    "# # Specify ID property\n",
+    "# in_fc_id = \"ALLOT_ID\"\n",
     "\n",
     "\n",
     "# --------------------------------- Define database output path -----------------------------------------\n",
@@ -122,35 +107,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Asset projects/dri-apps/assets/blm-database/long-term-drought-blend already exists.\n"
+      "Asset projects/dri-apps/assets/blm-database/short-term-drought-blend already exists.\n"
      ]
     }
    ],
    "source": [
-    "# Apply ID image function to input feature collection\n",
-    "out_list = eedb_cor.generate_id_i(in_fc, in_fc_id, land_unit, in_fc_path, in_ic_path, in_var_type, var_name)\n",
-    "out_i = ee.Image(out_list.get(0))\n",
-    "out_fc = ee.FeatureCollection(out_list.get(1))\n",
-    "\n",
-    "# Generate empty Image Collection asset to append images\n",
-    "os.system(f\"earthengine create collection {out_path}\")\n",
-    "\n",
-    "# Export ID image to new Image Collection\n",
-    "task = ee.batch.Export.image.toAsset(\n",
+    "if process == 'initialize':\n",
+    "    \n",
+    "    # Create dictionary of properties\n",
+    "    properties = {'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
+    "                  \"var-type\": var_type, \"var-name\": var_name}\n",
+    "    \n",
+    "    # Apply ID image function to input feature collection\n",
+    "    out_list = eedb_cor.generate_id_i(in_fc, properties)\n",
+    "    out_i = ee.Image(out_list.get(0))\n",
+    "    out_fc = ee.FeatureCollection(out_list.get(1))\n",
+    "    \n",
+    "    # Generate empty Image Collection asset to append images\n",
+    "    os.system(f\"earthengine create collection {out_path}\")\n",
+    "    \n",
+    "    # Export ID image to new Image Collection\n",
+    "    task = ee.batch.Export.image.toAsset(\n",
     "    image = out_i,\n",
     "    description = f'Initialize - {var_name_exp} - id',\n",
     "    assetId = out_path + '/id',\n",
     "    region = out_fc.geometry().buffer(20),\n",
     "    scale = 22.264,\n",
     "    maxPixels = 1e13)\n",
-    "task.start()"
+    "    task.start()\n",
+    "\n",
+    "else:\n",
+    "    print('Identify \"Initialize\" as your process to run this cell.')"
    ]
   },
   {
@@ -164,9 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "id": "OYGJjcFfmU44"
    },
    "outputs": [
@@ -179,62 +172,158 @@
     }
    ],
    "source": [
-    "# Run function to pre-process the GridMET drought data\n",
-    "in_i = eedb_col.preprocess_gm_drought(in_ic, var_name, start_date, end_date)\n",
-    "\n",
-    "# Get list of date strings from image\n",
-    "in_dates = in_i.bandNames().getInfo()\n",
-    "# print(in_dates)"
+    "if in_ic_path == 'GRIDMET/DROUGHT':\n",
+    "    \n",
+    "    # Run function to pre-process the GridMET drought data\n",
+    "    in_i = eedb_col.preprocess_gm_drought(in_ic, var_name, start_date, end_date)\n",
+    "    \n",
+    "    # Get list of date strings from image\n",
+    "    in_dates = in_i.bandNames().getInfo()\n",
+    "    print(in_dates)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop over dates to produce database image"
+    "## Loop over dates to produce database image continuous"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20220105\n",
-      "20220110\n",
-      "20220115\n",
-      "20220120\n",
-      "20220125\n",
-      "20220130\n",
-      "20220204\n",
-      "20220209\n",
-      "20220214\n",
-      "20220219\n",
-      "20220224\n"
+      "20220301\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220301\n",
+      "20220306\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220306\n",
+      "20220311\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220311\n",
+      "20220316\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220316\n",
+      "20220321\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220321\n",
+      "20220326\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220326\n",
+      "20220331\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220331\n",
+      "20220405\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220405\n",
+      "20220410\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220410\n",
+      "20220415\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220415\n",
+      "20220420\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220420\n",
+      "20220425\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220425\n",
+      "20220430\n",
+      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220430\n"
      ]
     }
    ],
    "source": [
-    "# Iterate over in_dates with functions\n",
-    "for in_date in in_dates:\n",
-    "    print(in_date)\n",
+    "if var_type == 'continuous':\n",
     "    \n",
-    "    # Select date band\n",
-    "    in_i_date = in_i.select([in_date])\n",
+    "    # Iterate over in_dates with functions\n",
+    "    for in_date in in_dates:\n",
+    "        print(in_date)\n",
+    "        \n",
+    "        # Select date band for single date\n",
+    "        in_i_date = in_i.select([in_date])\n",
+    "        \n",
+    "        # Run function to get time-series statistics for input feature collection for continuous variables\n",
+    "        out_fc = eedb_cor.img_to_pts_continuous(in_i_date, in_fc)\n",
+    "        print(out_fc.first().propertyNames().getInfo())\n",
+    "        \n",
+    "        # Create dictionary of properties\n",
+    "        properties = {'in-date': in_date, 'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
+    "                     \"var-type\": var_type, \"var-name\": var_name}\n",
+    "        \n",
+    "        # Convert centroid time-series to image collection time-series\n",
+    "        out_i = eedb_cor.pts_to_img_continuous(in_fc = out_fc, properties = properties)\n",
+    "        \n",
+    "        # Export the image\n",
+    "        eedb_cor.export_img(out_i, out_path, out_fc, var_name_exp, in_date)\n",
+    "\n",
+    "else:\n",
+    "    print('Identify \"continuous\" as your var_type to run this cell.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loop over dates to produce database image continuous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20220301\n",
+      "20220306\n",
+      "20220311\n",
+      "20220316\n",
+      "20220321\n",
+      "20220326\n",
+      "20220331\n",
+      "20220405\n",
+      "20220410\n",
+      "20220415\n",
+      "20220420\n",
+      "20220425\n",
+      "20220430\n"
+     ]
+    }
+   ],
+   "source": [
+    "if var_type == 'categorical':\n",
+    "    # Iterate over in_dates with functions\n",
+    "    for in_date in in_dates:\n",
+    "        print(in_date)\n",
+    "        \n",
+    "        # Select date band\n",
+    "        in_i_date = in_i.select([in_date])\n",
+    "        \n",
+    "        # Run function to get time-series statistics for input feature collection for continuous variables\n",
+    "        out_fc = eedb_cor.img_to_pts_categorical(in_i_date, in_fc)\n",
+    "        \n",
+    "        # Create dictionary of properties\n",
+    "        properties = {'in-date': in_date, 'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
+    "                     \"var-type\": var_type, \"var-name\": var_name}\n",
+    "               \n",
+    "        # Convert centroid time-series to image collection time-series\n",
+    "        out_i_date = eedb_cor.pts_to_img_categorical(in_fc = out_fc, properties = properties)\n",
+    "        \n",
+    "        # Export the image\n",
+    "        eedb_cor.export_img(out_i_date, out_path, out_fc, var_name_exp, in_date)\n",
     "    \n",
-    "    # Run function to get time-series statistics for input feature collection for continuous variables\n",
-    "    out_fc = img_to_pts_continuous(in_fc, out_fc, land_unit, in_fc_path, in_fc_id, in_ic_path, in_var_type, var_name)\n",
-    "    \n",
-    "    # Convert centroid time-series to image collection time-series\n",
-    "    out_i_date = pts_to_img_continuous(out_fc)\n",
-    "    \n",
-    "    # Export the image\n",
-    "    export_img(out_i_date, out_path, out_fc, var_name_exp, in_date)"
+    "else:\n",
+    "    print('Identify \"categorical\" as your var_type to run this cell.')"
    ]
   }
  ],
