Cleaned up export and initialize functions in coreMethods

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -5,10 +5,12 @@
    "metadata": {},
    "source": [
     "To dos\n",
-    "1) Improve logic and UX of main script  \n",
-    "2) Add checks whether image asset already exists   \n",
-    "3) Handle NAs  \n",
-    "4) Generate preprocessing scripts for other datasets"
+    "1) Fix categorical functions issues (export errors and bad outputs)  \n",
+    "2) Apply masks to noData values in outputs  \n",
+    "3) Add checks whether image asset already exists  \n",
+    "4) Assess whether properties are getting tagged to images  \n",
+    "5) Handle custom bin widths of histograms for categorical datasets  \n",
+    "6) Generate preprocessing scripts for other datasets  "
    ]
   },
   {
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -57,11 +59,11 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2022, 3, 1)\n",
+    "start_date = datetime.datetime(2022, 1, 1)\n",
     "end_date = datetime.datetime(2022, 5, 1)\n",
     "\n",
     "# Define whether to initialize new image collection or append to existing image collection\n",
-    "process = 'initialize' # 'initialize' or 'append'\n",
+    "process = 'append' # 'initialize' or 'append'\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
@@ -81,21 +83,38 @@
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "land_unit = 'blm-natl-grazing-allotment-polygons'\n",
     "\n",
-    "# Subset by geometry\n",
-    "geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
-    "in_fc = in_fc.filterBounds(geometry)\n",
-    "# Specify ID property\n",
-    "in_fc_id = \"ALLOT_ID\"\n",
-    "\n",
-    "# # Use full Feature Collection\n",
-    "# in_fc = in_fc\n",
+    "# # Subset by geometry\n",
+    "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
+    "# in_fc = in_fc.filterBounds(geometry)\n",
     "# # Specify ID property\n",
     "# in_fc_id = \"ALLOT_ID\"\n",
+    "\n",
+    "# Use full Feature Collection\n",
+    "in_fc = in_fc\n",
+    "# Specify ID property\n",
+    "in_fc_id = \"ALLOT_ID\"\n",
     "\n",
     "\n",
     "# --------------------------------- Define database output path -----------------------------------------\n",
     "var_name_exp = var_name.replace('_', '-')\n",
     "out_path = f\"projects/dri-apps/assets/blm-database/{var_name_exp}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21591\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(in_fc.size().getInfo())"
    ]
   },
   {
@@ -107,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Asset projects/dri-apps/assets/blm-database/short-term-drought-blend already exists.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if process == 'initialize':\n",
     "    \n",
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "id": "OYGJjcFfmU44"
    },
@@ -167,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['20220301', '20220306', '20220311', '20220316', '20220321', '20220326', '20220331', '20220405', '20220410', '20220415', '20220420', '20220425', '20220430']\n"
+      "['20220105', '20220110', '20220115', '20220120', '20220125', '20220130', '20220204', '20220209', '20220214', '20220219', '20220224', '20220301', '20220306', '20220311', '20220316', '20220321', '20220326', '20220331', '20220405', '20220410', '20220415', '20220420', '20220425', '20220430']\n"
      ]
     }
    ],
@@ -191,51 +202,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20220301\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
+      "20220105\n",
+      "20220110\n",
+      "20220115\n",
+      "20220120\n",
+      "20220125\n",
+      "20220130\n",
+      "20220204\n",
+      "20220209\n",
+      "20220214\n",
+      "20220219\n",
+      "20220224\n",
       "20220301\n",
       "20220306\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
-      "20220306\n",
-      "20220311\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
       "20220311\n",
       "20220316\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
-      "20220316\n",
-      "20220321\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
       "20220321\n",
       "20220326\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
-      "20220326\n",
-      "20220331\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
       "20220331\n",
       "20220405\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
-      "20220405\n",
-      "20220410\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
       "20220410\n",
       "20220415\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
-      "20220415\n",
-      "20220420\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
       "20220420\n",
       "20220425\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
-      "20220425\n",
-      "20220430\n",
-      "['system:index', 'p25', 'p5', 'mean', 'p50', 'p95', 'p75']\n",
       "20220430\n"
      ]
     }
@@ -252,7 +248,7 @@
     "        \n",
     "        # Run function to get time-series statistics for input feature collection for continuous variables\n",
     "        out_fc = eedb_cor.img_to_pts_continuous(in_i_date, in_fc)\n",
-    "        print(out_fc.first().propertyNames().getInfo())\n",
+    "        # print(out_fc.first().propertyNames().getInfo())\n",
     "        \n",
     "        # Create dictionary of properties\n",
     "        properties = {'in-date': in_date, 'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
@@ -284,6 +280,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "20220105\n",
+      "20220110\n",
+      "20220115\n",
+      "20220120\n",
+      "20220125\n",
+      "20220130\n",
+      "20220204\n",
+      "20220209\n",
+      "20220214\n",
+      "20220219\n",
+      "20220224\n",
       "20220301\n",
       "20220306\n",
       "20220311\n",
@@ -317,10 +324,10 @@
     "                     \"var-type\": var_type, \"var-name\": var_name}\n",
     "               \n",
     "        # Convert centroid time-series to image collection time-series\n",
-    "        out_i_date = eedb_cor.pts_to_img_categorical(in_fc = out_fc, properties = properties)\n",
+    "        out_i = eedb_cor.pts_to_img_categorical(in_fc = out_fc, properties = properties)\n",
     "        \n",
     "        # Export the image\n",
-    "        eedb_cor.export_img(out_i_date, out_path, out_fc, var_name_exp, in_date)\n",
+    "        eedb_cor.export_img(out_i, out_path, out_fc, var_name_exp, in_date)\n",
     "    \n",
     "else:\n",
     "    print('Identify \"categorical\" as your var_type to run this cell.')"
