Updated passing of arguments to functions, added function descriptions, cleaned up naming of assets

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -5,17 +5,14 @@
    "metadata": {},
    "source": [
     "To dos\n",
-    "1) Fix categorical functions issues (export errors and bad outputs)  \n",
-    "2) Apply masks to noData values in outputs  \n",
-    "3) Add checks whether image asset already exists  \n",
-    "4) Assess whether properties are getting tagged to images  \n",
-    "5) Handle custom bin widths of histograms for categorical datasets  \n",
-    "6) Generate preprocessing scripts for other datasets  "
+    "1) Fix categorical functions issues (export errors and bad outputs)   \n",
+    "2) Handle custom bin widths of histograms for categorical datasets  \n",
+    "3) Generate preprocessing scripts for other datasets  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -50,11 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "id": "zQPixTuOF658"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "projects/dri-apps/assets/blm-database/blmallotments-gridmetdrought-longtermdroughtblend\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
@@ -68,53 +73,68 @@
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
-    "# Define input Image Collection\n",
-    "in_ic_path = \"GRIDMET/DROUGHT\"\n",
-    "in_ic = ee.ImageCollection(in_ic_path)\n",
+    "# Define input Image Collection paths using dataset dictionary\n",
+    "in_ic_dict = {'GridMET_Drought': {'in_ic_paths': ['GRIDMET/DROUGHT'],\n",
+    "                                  'var_names': ['long_term_drought_blend', 'short_term_drought_blend'],\n",
+    "                                  'var_type': 'categorical'},\n",
+    "             'RAP_Cover': {'in_ic_paths': ['projects/rangeland-analysis-platform/vegetation-cover-v3'],\n",
+    "                           'var_names': ['AFG', 'BGR', 'LTR', 'PFG', 'SHR', 'TRE'],\n",
+    "                           'var_type': 'continuous'},\n",
+    "             'RAP_Production': {'in_ic_paths': ['projects/rangeland-analysis-platform/npp-partitioned-v3'],\n",
+    "                                'var_names': ['afgAGB', 'pfgAGB', 'herbaceousAGB'],\n",
+    "                                'var_type': 'continuous'},\n",
+    "             'USDM': {'in_ic_paths': ['projects/climate-engine/usdm/weekly'],\n",
+    "                      'var_names': ['usdm'],\n",
+    "                      'var_type': 'categorical'},\n",
+    "             'MOD11_LST': {'in_ic_paths': ['MODIS/061/MOD11A2'],\n",
+    "                           'var_names': ['LST_Day_1km'],\n",
+    "                           'var_type': 'continuous'},\n",
+    "             'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
+    "                          'var_names': ['ET', 'PET'],\n",
+    "                          'var_type': 'continuous'}}\n",
+    "\n",
+    "in_ic_name = 'GridMET_Drought'\n",
+    "in_ic_paths = in_ic_dict.get(in_ic_name).get('in_ic_paths')\n",
     "\n",
     "# Define variable to generate database table for\n",
-    "var_name = 'short_term_drought_blend'\n",
-    "var_type = 'continuous' # 'continuous' or 'categorical'\n",
+    "var_name = 'long_term_drought_blend'\n",
+    "var_type = in_ic_dict.get(in_ic_name).get('var_type') # 'continuous' or 'categorical'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "\n",
+    "# Define input path for Feature Collection\n",
     "in_fc_path = 'projects/dri-apps/assets/blm-admin/BLM_Natl_Grazing_Allotment_Polygons_Simplified_clean'\n",
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
-    "land_unit = 'blm-natl-grazing-allotment-polygons'\n",
     "\n",
-    "# # Subset by geometry\n",
-    "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
-    "# in_fc = in_fc.filterBounds(geometry)\n",
-    "# # Specify ID property\n",
-    "# in_fc_id = \"ALLOT_ID\"\n",
-    "\n",
-    "# Use full Feature Collection\n",
-    "in_fc = in_fc\n",
     "# Specify ID property\n",
     "in_fc_id = \"ALLOT_ID\"\n",
     "\n",
+    "# Define land unit names\n",
+    "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Grazing_Allotment_Polygons_Simplified_clean'):\n",
+    "    land_unit_long = 'blm-natl-grazing-allotment-polygons'\n",
+    "    land_unit_short = 'blm-allotments'\n",
+    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Admu_FieldOffice_Polygons'):\n",
+    "    land_unit_long = 'blm-natl-fieldoffice-polygons'\n",
+    "    land_unit_short = 'blm-fieldoffices'\n",
+    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Admu_DistrictOffice_Polygons'):\n",
+    "    land_unit_long = 'blm-natl-districtoffice-polygons'\n",
+    "    land_unit_short = 'blm-districtoffices'\n",
+    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Admu_StateOffice_Polygons'):\n",
+    "    land_unit_long = 'blm-natl-stateoffice-polygons'\n",
+    "    land_unit_short = 'blm-stateoffices'\n",
+    "\n",
+    "# Subset by geometry\n",
+    "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
+    "# in_fc = in_fc.filterBounds(geometry)\n",
+    "\n",
+    "# Use full Feature Collection\n",
+    "in_fc = in_fc\n",
+    "\n",
     "\n",
     "# --------------------------------- Define database output path -----------------------------------------\n",
-    "var_name_exp = var_name.replace('_', '-')\n",
-    "out_path = f\"projects/dri-apps/assets/blm-database/{var_name_exp}\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21591\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(in_fc.size().getInfo())"
+    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('-', '')}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '')}\"\n",
+    "print(out_path)"
    ]
   },
   {
@@ -126,18 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'in-fc-id': 'ALLOT_ID', 'in-fc-path': 'projects/dri-apps/assets/blm-admin/BLM_Natl_Grazing_Allotment_Polygons_Simplified_clean', 'in-ic-paths': ['GRIDMET/DROUGHT'], 'land-unit': 'blm-natl-grazing-allotment-polygons', 'var-name': 'long_term_drought_blend', 'var-type': 'categorical'}\n",
+      "Asset projects/dri-apps/assets/blm-database/blmallotments-gridmetdrought-longtermdroughtblend already exists.\n"
+     ]
+    }
+   ],
    "source": [
     "if process == 'initialize':\n",
     "    \n",
     "    # Create dictionary of properties\n",
-    "    properties = {'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
+    "    properties = {'land-unit': land_unit_long, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-paths\": in_ic_paths,\n",
     "                  \"var-type\": var_type, \"var-name\": var_name}\n",
     "    \n",
     "    # Apply ID image function to input feature collection\n",
-    "    out_list = eedb_cor.generate_id_i(in_fc, properties)\n",
+    "    out_list = eedb_cor.generate_id_img(in_fc, properties)\n",
     "    out_i = ee.Image(out_list.get(0))\n",
     "    out_fc = ee.FeatureCollection(out_list.get(1))\n",
     "    \n",
@@ -146,16 +175,16 @@
     "    \n",
     "    # Export ID image to new Image Collection\n",
     "    task = ee.batch.Export.image.toAsset(\n",
-    "    image = out_i,\n",
-    "    description = f'Initialize - {var_name_exp} - id',\n",
-    "    assetId = out_path + '/id',\n",
-    "    region = out_fc.geometry().buffer(20),\n",
-    "    scale = 22.264,\n",
-    "    maxPixels = 1e13)\n",
+    "        image = out_i,\n",
+    "        description = f\"Initialize - {land_unit_short.replace('-', '')} {in_ic_name.replace('_', '').lower()} {var_name.replace('_', '')} - id\",\n",
+    "        assetId = out_path + '/id',\n",
+    "        region = out_fc.geometry().buffer(20),\n",
+    "        scale = 22.264,\n",
+    "        maxPixels = 1e13)\n",
     "    task.start()\n",
     "\n",
     "else:\n",
-    "    print('Identify \"Initialize\" as your process to run this cell.')"
+    "    print('Identify \"initialize\" as your process to run this cell.')"
    ]
   },
   {
@@ -169,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "id": "OYGJjcFfmU44"
    },
@@ -183,10 +212,46 @@
     }
    ],
    "source": [
-    "if in_ic_path == 'GRIDMET/DROUGHT':\n",
+    "if in_ic_paths == ['GRIDMET/DROUGHT']:\n",
     "    \n",
     "    # Run function to pre-process the GridMET drought data\n",
-    "    in_i = eedb_col.preprocess_gm_drought(in_ic, var_name, start_date, end_date)\n",
+    "    in_i = eedb_col.preprocess_gm_drought(in_ic_paths, var_name, start_date, end_date)\n",
+    "    \n",
+    "    # Get list of date strings from image\n",
+    "    in_dates = in_i.bandNames().getInfo()\n",
+    "    print(in_dates)\n",
+    "    \n",
+    "elif in_ic_paths == ['projects/rangeland-analysis-platform/vegetation-cover-v3'] or in_ic_paths == ['projects/rangeland-analysis-platform/npp-partitioned-v3']:\n",
+    "    \n",
+    "    # Run function to pre-process the GridMET drought data\n",
+    "    in_i = eedb_col.preprocess_rap(in_ic_paths, var_name, start_date, end_date)\n",
+    "    \n",
+    "    # Get list of date strings from image\n",
+    "    in_dates = in_i.bandNames().getInfo()\n",
+    "    print(in_dates)\n",
+    "\n",
+    "elif in_ic_paths == ['projects/climate-engine/usdm/weekly']:\n",
+    "    \n",
+    "    # Run function to pre-process the GridMET drought data\n",
+    "    in_i = eedb_col.preprocess_usdm(in_ic_paths, var_name, start_date, end_date)\n",
+    "    \n",
+    "    # Get list of date strings from image\n",
+    "    in_dates = in_i.bandNames().getInfo()\n",
+    "    print(in_dates)\n",
+    "\n",
+    "elif in_ic_paths == ['MODIS/006/MOD11A2']:\n",
+    "    \n",
+    "    # Run function to pre-process the GridMET drought data\n",
+    "    in_i = eedb_col.preprocess_modlst(in_ic_paths, var_name, start_date, end_date)\n",
+    "    \n",
+    "    # Get list of date strings from image\n",
+    "    in_dates = in_i.bandNames().getInfo()\n",
+    "    print(in_dates)\n",
+    "    \n",
+    "elif in_ic_paths == ['MODIS/006/MOD16A2']:\n",
+    "    \n",
+    "    # Run function to pre-process the GridMET drought data\n",
+    "    in_i = eedb_col.preprocess_modet(in_ic_paths, var_name, start_date, end_date)\n",
     "    \n",
     "    # Get list of date strings from image\n",
     "    in_dates = in_i.bandNames().getInfo()\n",
@@ -197,12 +262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop over dates to produce database image continuous"
+    "## Loop over dates to produce and export database images for continuous variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,25 +279,7 @@
       "20220115\n",
       "20220120\n",
       "20220125\n",
-      "20220130\n",
-      "20220204\n",
-      "20220209\n",
-      "20220214\n",
-      "20220219\n",
-      "20220224\n",
-      "20220301\n",
-      "20220306\n",
-      "20220311\n",
-      "20220316\n",
-      "20220321\n",
-      "20220326\n",
-      "20220331\n",
-      "20220405\n",
-      "20220410\n",
-      "20220415\n",
-      "20220420\n",
-      "20220425\n",
-      "20220430\n"
+      "20220130\n"
      ]
     }
    ],
@@ -248,17 +295,16 @@
     "        \n",
     "        # Run function to get time-series statistics for input feature collection for continuous variables\n",
     "        out_fc = eedb_cor.img_to_pts_continuous(in_i_date, in_fc)\n",
-    "        # print(out_fc.first().propertyNames().getInfo())\n",
     "        \n",
     "        # Create dictionary of properties\n",
-    "        properties = {'in-date': in_date, 'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
-    "                     \"var-type\": var_type, \"var-name\": var_name}\n",
+    "        properties = {'in-date': in_date, 'land-unit': land_unit_long, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_paths,\n",
+    "                     \"var-type\": var_type, \"var-name\": var_name, 'out-path': out_path, 'var-name-exp': var_name.replace('_', '')}\n",
     "        \n",
     "        # Convert centroid time-series to image collection time-series\n",
     "        out_i = eedb_cor.pts_to_img_continuous(in_fc = out_fc, properties = properties)\n",
     "        \n",
     "        # Export the image\n",
-    "        eedb_cor.export_img(out_i, out_path, out_fc, var_name_exp, in_date)\n",
+    "        eedb_cor.export_img(out_i = out_i, out_fc = out_fc, properties = properties)\n",
     "\n",
     "else:\n",
     "    print('Identify \"continuous\" as your var_type to run this cell.')"
@@ -268,12 +314,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop over dates to produce database image continuous"
+    "## Loop over dates to produce and export database images for categorical variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -320,14 +366,14 @@
     "        out_fc = eedb_cor.img_to_pts_categorical(in_i_date, in_fc)\n",
     "        \n",
     "        # Create dictionary of properties\n",
-    "        properties = {'in-date': in_date, 'land-unit': land_unit, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_path,\n",
-    "                     \"var-type\": var_type, \"var-name\": var_name}\n",
+    "        properties = {'in-date': in_date, 'land-unit': land_unit_long, 'in-fc-path': in_fc_path, \"in-fc-id\": in_fc_id, \"in-ic-path\": in_ic_paths[0],\n",
+    "                     \"var-type\": var_type, \"var-name\": var_name, 'out-path': out_path, 'var-name-exp': var_name.replace('_', '')}\n",
     "               \n",
     "        # Convert centroid time-series to image collection time-series\n",
     "        out_i = eedb_cor.pts_to_img_categorical(in_fc = out_fc, properties = properties)\n",
     "        \n",
     "        # Export the image\n",
-    "        eedb_cor.export_img(out_i, out_path, out_fc, var_name_exp, in_date)\n",
+    "        eedb_cor.export_img(out_i = out_i, out_fc = out_fc, properties = properties)\n",
     "    \n",
     "else:\n",
     "    print('Identify \"categorical\" as your var_type to run this cell.')"
